--- a/VectorComponents/WindowsProject1.vcxproj
+++ b/VectorComponents/WindowsProject1.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{8E837882-E680-4033-AFE0-4F37AAE7B024}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>WindowsProject1</RootNamespace>
+    <RootNamespace>VectorComponents</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>Vector Components</ProjectName>
   </PropertyGroup>
