--- a/VectorComponents/VectorComponents.vcxproj
+++ b/VectorComponents/VectorComponents.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="context.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="grid.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="util.h" />
@@ -163,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="context.cpp" />
+    <ClCompile Include="grid.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="vector.cpp" />
     <ClCompile Include="VectorComponents.cpp" />
