--- a/VectorComponents/VectorComponents.vcxproj
+++ b/VectorComponents/VectorComponents.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="context.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="grid.h" />
+    <ClInclude Include="renderTarget.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="util.h" />
@@ -165,6 +166,7 @@
   <ItemGroup>
     <ClCompile Include="context.cpp" />
     <ClCompile Include="grid.cpp" />
+    <ClCompile Include="renderTarget.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="vector.cpp" />
     <ClCompile Include="VectorComponents.cpp" />
