--- a/VectorComponents/VectorComponents.vcxproj.filters
+++ b/VectorComponents/VectorComponents.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="VectorComponents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="grid.h">
+    <ClInclude Include="GridElement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Context.h">
@@ -47,7 +47,7 @@
     <ClCompile Include="VectorComponents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="grid.cpp">
+    <ClCompile Include="GridElement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Context.cpp">
