--- a/VectorComponents/VectorComponents.vcxproj.filters
+++ b/VectorComponents/VectorComponents.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VectorComponentsElement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VectorComponents.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Vector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VectorComponentsElement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
