Start splitting out BaseWindow

--- a/VectorComponents/VectorComponents.vcxproj
+++ b/VectorComponents/VectorComponents.vcxproj
@@ -154,6 +154,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BaseWindow.h" />
     <ClInclude Include="Context.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GridElement.h" />
@@ -166,6 +167,7 @@
     <ClInclude Include="VectorComponentsElement.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseWindow.cpp" />
     <ClCompile Include="Context.cpp" />
     <ClCompile Include="GridElement.cpp" />
     <ClCompile Include="RenderTarget.cpp" />
