--- a/VectorComponents/VectorComponents.vcxproj.filters
+++ b/VectorComponents/VectorComponents.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="VectorComponentsElement.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BaseWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VectorComponents.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VectorComponentsElement.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
